views: don't send OnKeypressUnhandled for all keys

Textfield::OnKeyPressed() is not responsible for all keystroke handling,
but it is called for every pressed key, which means that 'handled' in
this function is not correct if the key is handled elsewhere, like IME
or focus hotkeys. As such, don't call OnKeypressUnhandled() in OnKeyPressed()
at all; only call it in InsertChar() for readonly textfields.

BUG=649559, 649007

Review-Url: https://codereview.chromium.org/2399603002
Cr-Commit-Position: refs/heads/master@{#423908}

Former-commit-id: 48a12e434146dc568dabb364d84be911b6d369e4